# wampproto-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
cmake/: wampprotoConfig.cmake.in
include/: wampproto.h
include/wampproto/: authenticators.h  cbor_serializer.h  dict.h  id_generator.h  joiner.h  messages.h  mutex.h  serializers.h  session.h  session_details.h  transports.h  value.h  wampproto.h
include/wampproto/authenticators/: anonymous.h  authenticator.h  cryptosign.h  ticket.h  wampcra.h
include/wampproto/messages/: abort.h  authenticate.h  call.h  cancel.h  challenge.h  error.h  event.h  goodbye.h  hello.h  interrupt.h  invocation.h  message.h  publish.h  published.h  register.h  registered.h  result.h  subscribe.h  subscribed.h  unregister.h  unregistered.h  unsubscribe.h  unsubscribed.h  welcome.h  yield.h
include/wampproto/serializers/: cbor.h  json.h  msgpack.h  serializer.h
include/wampproto/transports/: rawsocket.h
src/: cbor_serializer.c  dict.c  id_generator.c  joiner.c  mutex.c  session.c  session_details.c  value.c  value_clone.c  wampproto.c
src/authenticators/: anonymous.c  cryptosign.c  ticket.c  wampcra.c
src/messages/: abort.c  authenticate.c  call.c  cancel.c  challenge.c  error.c  event.c  goodbye.c  hello.c  interrupt.c  invocation.c  publish.c  published.c  register.c  registered.c  result.c  subscribe.c  subscribed.c  unregister.c  unregistered.c  unsubscribe.c  unsubscribed.c  welcome.c  yield.c
src/serializers/: cbor.c  helpers.c  json.c  msgpack.c
src/transports/: rawsocket.c
tests/: main.c  test_authenticators.c  test_messages.c  test_rawsocket.c  test_serializers.c  test_session.c  test_wampcra.c  test_wampproto_session.c
